--- a/src/Data/DTA/Serialize/RB3.erb
+++ b/src/Data/DTA/Serialize/RB3.erb
@@ -5,6 +5,7 @@ import Control.Applicative ((<$>), (<*>))
 import Control.Monad ((>=>))
 
 import qualified Data.ByteString.Char8 as B8
+import qualified Data.Map as Map
 
 import Data.DTA.Serialize
 import Data.DTA.Serialize.Magma (Gender(..))
@@ -30,7 +31,8 @@ def makeRecord(name, fields)
   data = "data #{name} = #{name} { #{records.join(', ')} } #{deriving}"
 
   to_records = fields.map { |f| "(#{f[0].inspect}, toChunks $ #{f[1]} x)" }
-  to_defn = "toChunks x = makeDict' [ #{to_records.join(', ')} ]"
+  to_defn =
+    "toChunks x = makeDict $ Dict $ Map.fromList [ #{to_records.join(', ')} ]"
   to_instance = "instance ToChunks #{name} where { #{to_defn} }"
 
   from_records =
@@ -73,31 +75,31 @@ end
 %>
 
 <%= makeRecord('SongPackage', [
-  ['name'               , nil, 'B8.ByteString'],
-  ['artist'             , nil, 'B8.ByteString'],
-  ['master'             , nil, 'Bool'],
-  ['song'               , nil, 'Song'],
-  ['song_scroll_speed'  , nil, 'Integer'],
-  ['bank'               , nil, 'B8.ByteString'],
-  ['anim_tempo'         , nil, 'Integer'],
-  ['song_length'        , nil, 'Integer'],
-  ['preview'            , nil, '(Integer, Integer)'],
-  ['rank'               , nil, 'Dict Integer'],
-  ['genre'              , nil, 'Keyword'],
-  ['vocal_gender'       , nil, 'Gender'],
-  ['version'            , nil, 'Integer'],
-  ['format'             , nil, 'Integer'],
-  ['album_art'          , nil, 'Bool'],
-  ['year_released'      , nil, 'Integer'],
-  ['rating'             , nil, 'Integer'],
-  ['sub_genre'          , nil, 'Keyword'],
+  ['name'               , nil, 'B8.ByteString'         ],
+  ['artist'             , nil, 'B8.ByteString'         ],
+  ['master'             , nil, 'Bool'                  ],
+  ['song'               , nil, 'Song'                  ],
+  ['song_scroll_speed'  , nil, 'Integer'               ],
+  ['bank'               , nil, 'B8.ByteString'         ],
+  ['anim_tempo'         , nil, 'Integer'               ],
+  ['song_length'        , nil, 'Integer'               ],
+  ['preview'            , nil, '(Integer, Integer)'    ],
+  ['rank'               , nil, 'Dict Integer'          ],
+  ['genre'              , nil, 'Keyword'               ],
+  ['vocal_gender'       , nil, 'Gender'                ],
+  ['version'            , nil, 'Integer'               ],
+  ['format'             , nil, 'Integer'               ],
+  ['album_art'          , nil, 'Bool'                  ],
+  ['year_released'      , nil, 'Integer'               ],
+  ['rating'             , nil, 'Integer'               ],
+  ['sub_genre'          , nil, 'Keyword'               ],
   ['song_id'            , nil, 'Either Integer Keyword'],
-  ['tuning_offset_cents', nil, 'Float'],
-  ['guide_pitch_volume' , nil, 'Float'],
-  ['game_origin'        , nil, 'Keyword'],
-  ['encoding'           , nil, 'Keyword'],
-  ['album_name'         , nil, 'B8.ByteString'],
-  ['album_track_number' , nil, 'Integer'],
+  ['tuning_offset_cents', nil, 'Float'                 ],
+  ['guide_pitch_volume' , nil, 'Float'                 ],
+  ['game_origin'        , nil, 'Keyword'               ],
+  ['encoding'           , nil, 'Keyword'               ],
+  ['album_name'         , nil, 'B8.ByteString'         ],
+  ['album_track_number' , nil, 'Integer'               ],
   ]) %>
 
 <%= makeRecord('Song', [
