--- a/src/Data/DTA/Serialize/RB3.erb
+++ b/src/Data/DTA/Serialize/RB3.erb
@@ -7,6 +7,7 @@ import Control.Monad ((>=>))
 import qualified Data.ByteString.Char8 as B8
 import qualified Data.Map as Map
 
+import Data.DTA
 import Data.DTA.Serialize
 import Data.DTA.Serialize.Magma (Gender(..))
 
@@ -14,42 +15,58 @@ import Data.DTA.Serialize.Magma (Gender(..))
 require File.expand_path(File.dirname(__FILE__) + '/make_data')
 %>
 
+type Path = Either B8.ByteString Keyword
+
 <%= makeRecord('SongPackage', [
-  ['name'               , nil, 'B8.ByteString'         ],
-  ['artist'             , nil, 'B8.ByteString'         ],
-  ['master'             , nil, 'Bool'                  ],
-  ['song'               , nil, 'Song'                  ],
-  ['song_scroll_speed'  , nil, 'Integer'               ],
-  ['bank'               , nil, 'B8.ByteString'         ],
-  ['anim_tempo'         , nil, 'Integer'               ],
-  ['song_length'        , nil, 'Integer'               ],
-  ['preview'            , nil, '(Integer, Integer)'    ],
-  ['rank'               , nil, 'Dict Integer'          ],
-  ['genre'              , nil, 'Keyword'               ],
-  ['vocal_gender'       , nil, 'Gender'                ],
-  ['version'            , nil, 'Integer'               ],
-  ['format'             , nil, 'Integer'               ],
-  ['album_art'          , nil, 'Bool'                  ],
-  ['year_released'      , nil, 'Integer'               ],
-  ['rating'             , nil, 'Integer'               ],
-  ['sub_genre'          , nil, 'Keyword'               ],
-  ['song_id'            , nil, 'Either Integer Keyword'],
-  ['tuning_offset_cents', nil, 'Float'                 ],
-  ['guide_pitch_volume' , nil, 'Float'                 ],
-  ['game_origin'        , nil, 'Keyword'               ],
-  ['encoding'           , nil, 'Keyword'               ],
-  ['album_name'         , nil, 'B8.ByteString'         ],
-  ['album_track_number' , nil, 'Integer'               ],
+  ['name'               , nil, 'B8.ByteString'            ],
+  ['artist'             , nil, 'B8.ByteString'            ],
+  ['master'             , nil, 'Bool'                     ],
+  ['song_id'            , nil, 'Either Integer Keyword'   ],
+  ['song'               , nil, 'Song'                     ],
+  ['bank'               , nil, maybe('Path')              ],
+  ['drum_bank'          , nil, maybe('Path')              ],
+  ['anim_tempo'         , nil, 'Either AnimTempo Integer' ],
+  ['band_fail_cue'      , nil, maybe('Path')              ],
+  ['song_scroll_speed'  , nil, 'Integer'                  ],
+  ['preview'            , nil, '(Integer, Integer)'       ],
+  ['song_length'        , nil, 'Integer'                  ],
+  ['rank'               , nil, 'Dict Integer'             ],
+  ['solo'               , nil, maybe('InParens [Keyword]')],
+  ['format'             , nil, 'Integer'                  ],
+  ['version'            , nil, 'Integer'                  ],
+  ['game_origin'        , nil, 'Keyword'                  ],
+  ['rating'             , nil, 'Integer'                  ],
+  ['genre'              , nil, 'Keyword'                  ],
+  ['sub_genre'          , nil, maybe('Keyword')           ],
+  ['vocal_gender'       , nil, 'Gender'                   ],
+  ['short_version'      , nil, maybe('Integer')           ],
+  ['year_released'      , nil, 'Integer'                  ],
+  ['album_art'          , nil, maybe('Bool')              ],
+  ['album_name'         , nil, maybe('B8.ByteString')     ],
+  ['album_track_number' , nil, maybe('Integer')           ],
+  ['vocal_tonic_note'   , nil, maybe('Integer')           ],
+  ['song_tonality'      , nil, maybe('Integer')           ],
+  ['tuning_offset_cents', nil, maybe('Float')             ],
+  ['real_guitar_tuning' , nil, maybe('InParens [Integer]')],
+  ['real_bass_tuning'   , nil, maybe('InParens [Integer]')],
+  ['guide_pitch_volume' , nil, maybe('Float')             ],
+  ['encoding'           , nil, maybe('Keyword')           ],
+  ]) %>
+
+<%= makeEnum('AnimTempo', [
+  ['kTempoSlow'  , nil],
+  ['kTempoMedium', nil],
+  ['kTempoFast'  , nil],
   ]) %>
 
 <%= makeRecord('Song', [
   ['name'          , 'songName', 'B8.ByteString'                       ],
-  ['tracks_count'  , nil       , 'InParens [Integer]'                  ],
+  ['tracks_count'  , nil       , maybe('InParens [Integer]')           ],
   ['tracks'        , nil       , 'InParens (Dict (InParens [Integer]))'],
+  ['vocal_parts'   , nil       , 'Integer'                             ],
   ['pans'          , nil       , 'InParens [Float]'                    ],
   ['vols'          , nil       , 'InParens [Float]'                    ],
   ['cores'         , nil       , 'InParens [Integer]'                  ],
-  ['vocal_parts'   , nil       , 'Integer'                             ],
   ['drum_solo'     , nil       , 'DrumSounds'                          ],
   ['drum_freestyle', nil       , 'DrumSounds'                          ],
   ]) %>
